--- a/misestilos.css
+++ b/misestilos.css
@@ -3,12 +3,10 @@
 }
 
 h1{
+    text-align: center;
     align-content: center;
     color: white;
-    font-family: 'Courier New', Courier, monospace;
-    padding-top: 20%;
-    padding-left: 20px;
-}
-.enlace1 {
-color: red;
+    font-family:Arial, Helvetica, sans-serif;
+    margin-top: 20%;
+   
 }
